name:                LL
version:             0.1.0.0
synopsis:
description:
license:             ISC
license-file:        LICENSE
author:              Iavor S. Diatchki
maintainer:          iavor.diatchki@gmail.com
copyright:
category:            Language
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable LL
  main-is:             Main.hs
  other-modules:       Lexer, Parser, Syntax
  build-depends:       base           >=4.8   && <4.9,
                       text           >=1.2   && <1.3,
                       alex-tools     >=0.1.1 && <0.2,
                       containers     >=0.5   && <0.6,
                       pretty         >=1.1   && <1.2,
                       haskell-lexer  >=1.0   && <1.1,
                       array

  ghc-options:         -Wall
  hs-source-dirs:      src
  build-tools:         alex, happy
  default-language:    Haskell2010
